After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 778452 - glsinkbin: leaks sink element
glsinkbin: leaks sink element
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-bad
unspecified
Other Linux
: Normal normal
: 1.10.4
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2017-02-10 13:44 UTC by Juan Pablo Ugarte
Modified: 2017-02-19 10:54 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Proposed patch (2.78 KB, patch)
2017-02-10 13:44 UTC, Juan Pablo Ugarte
committed Details | Review

Description Juan Pablo Ugarte 2017-02-10 13:44:15 UTC
Created attachment 345456 [details] [review]
Proposed patch

GstGLSinkBin adds a reference to the sink element in set_property() but never releases it in dispose or finalize methods.

The proposed patch does not add that reference and relies in the indirect reference added by gst_bin_add() instead (just like its already doing with upload convert and balance elements)
Comment 1 Sebastian Dröge (slomo) 2017-02-14 10:18:58 UTC
commit ef739e726fb52305245f8bbf7d26f8e2ae0f71e2
Author: Juan Pablo Ugarte <juanpablougarte@gmail.com>
Date:   Fri Feb 10 10:29:49 2017 -0300

    GstGLSinkBin: fixed sink property leak
    
    No need to keep an extra reference to sink since an indirect one is added by gst_bin_add()
    
    https://bugzilla.gnome.org/show_bug.cgi?id=778452